--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-scripts",
-  "version": "4.0.0",
+  "name": "lixibox-react-scripts",
+  "version": "4.0.0-alpha.2",
   "description": "Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
@@ -84,6 +84,7 @@
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
+    "webpack-retry-chunk-load-plugin": "1.4.0",
     "workbox-webpack-plugin": "5.1.4"
   },
   "devDependencies": {
